# miden-zypherpunk-bridge

./: .gitignore  next.config.ts  package-lock.json  package.json  run-relayers.ps1  run-relayers.sh  run-rust-backend.bat  run-rust-backend.sh  test-accountid.html  test-accountid.js  test_memo.txt
app/: globals.css  layout.tsx  page.tsx
app/api/deposit/hash/: route.ts
app/api/wallet/addresses/: route.ts
app/api/wallet/balance/: route.ts
app/api/wallet/send/: route.ts
app/api/wallet/sync/: route.ts
app/api/wallet/transactions/: route.ts
app/claim/: page.tsx
app/components/: LoadingModal.tsx  ZcashSendModal.tsx
app/wallet/: page.tsx
lib/: parse-wallet.ts  zcash-cli.ts
rust-backend/: Cargo.toml  Rocket.toml  build.rs
rust-backend/keystore/: 139198655596785782  1404288268040595605  2675286952766024450  2698767091222978376  395603335479991690  4018167025071594248  4046926521133376445  4147587990464125228  4635147629914946343  4718315621357073411  499832356751848662  5637264222067735619  7120121399252154718  7200158855511546581  7977359592793375638  9162184830380621422  9241296512203479755  976642431087979985
rust-backend/rust-backend/keystore/: 3469478253846754447
rust-backend/src/: lib.rs  main.rs
rust-backend/src/account/: create.rs  mod.rs  token_wrapper.rs
rust-backend/src/asm/contracts/: fungible_wrapper.masm  fungible_wrapper_temp.masm
rust-backend/src/asm/note_scripts/: CROSSCHAIN.masm
rust-backend/src/bridge/: deposit.rs  miden_exit_relayer.rs  mod.rs  relayer.rs
rust-backend/src/db/: deposits.rs  faucets.rs  mod.rs  withdrawals.rs
rust-backend/src/miden/: bridge_scripts.rs  mod.rs  notes.rs  recipient.rs
rust-backend/src/zcash/: bridge_wallet.rs  mod.rs
rust-backend/test_wallet/keystore/: 1935012389107165706
scripts/: zcash-to-miden-bridge.js
wallet/: README.md  wallet-cli.bat  wallet-cli.ps1
