[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"
default-run = "rust-backend"

[[bin]]
name = "create_account"
path = "src/bin/create_account.rs"

[[bin]]
name = "mint_private_note"
path = "src/bin/mint_private_note.rs"

[[bin]]
name = "mint_public_note"
path = "src/bin/mint_public_note.rs"

[[bin]]
name = "test_account_format"
path = "src/bin/test_account_format.rs"

[[bin]]
name = "test_mono_bridge_pattern"
path = "src/bin/test_mono_bridge_pattern.rs"

[[bin]]
name = "check_consumable_notes"
path = "src/bin/check_consumable_notes.rs"

[[bin]]
name = "consume_note"
path = "src/bin/consume_note.rs"

[[bin]]
name = "convert_account_id"
path = "src/bin/convert_account_id.rs"

[[bin]]
name = "zcash_relayer"
path = "src/bin/zcash_relayer.rs"

[[bin]]
name = "miden_exit_relayer"
path = "src/bin/miden_exit_relayer.rs"

[[bin]]
name = "zcash_to_miden_bridge"
path = "src/bin/zcash_to_miden_bridge.rs"

[[bin]]
name = "mint_tokens"
path = "src/bin/mint_tokens.rs"

[dependencies]
miden-client = { version = "0.12", features = ["tonic", "testing"] }
miden-client-sqlite-store = { version = "0.12" }
miden-lib = { version = "0.12", default-features = false }
miden-objects = { version = "0.12", default-features = false, features = ["testing"] }
miden-crypto = { version = "0.18", features = ["executable"] }
miden-assembly = "0.17.0"
rand = { version = "0.9" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rusqlite = { version = "^0.36", features = ["bundled"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

[build-dependencies]
miden-lib = { version = "0.12", default-features = false }
miden-objects = { version = "0.12", default-features = false }
miden-assembly = "0.17.0"
